Bug 1352446 - Fix 32-bit build crash with Oculus VR. r=daoshengmu, a=lizzard - Validate GetSharedResourceView in VRDisplayOculus::SubmitFrame and VRDisplayPuppet::SubmitFrame - Correct size of frameIndex to be "long long" rather than "int" for   ovr_GetPredictedDisplayTime - Updated to Oculus 1.15.0 SDK - Now sending absolute timestamp of the predicted frame time   to ovr_GetTrackingState rather than a delta

MozReview-Commit-ID: GLSkqwae7Jp